# snakemake-executor-plugin-googlebatch

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci_mocked_api.yaml  ci_true_api.yml  main.yaml  release-please.yml  run-tests.yaml
docs/: further.md  intro.md
example/: README.md  show-logs.py
example/hello-world/: README.md
example/hello-world-boot-disk/: README.md  Snakefile
example/hello-world-cos/: Dockerfile  README.md  docker-entrypoint.sh
example/hello-world-gpu/: README.md  Snakefile
example/hello-world-intel-mpi/: README.md  Snakefile  pi_MPI.c
example/hello-world-preemption/: README.md
example/landsat/: README.md  Snakefile
example/multi-hello/: Snakefile
script/: downloader.py
scripts/: install-snek.sh
snakemake_executor_plugin_googlebatch/: __init__.py  build.py  command.py  executor.py  snippet.py  utils.py
snakemake_executor_plugin_googlebatch/snippets/intel-mpi/: run.sh  setup.sh
snakemake_executor_plugin_googlebatch/snippets/intel-mpi/include/: paths.sh
tests/: __init__.py  docker-compose.yml  test_executor.py  tests.py  tests_mocked_api.py  tests_true_api.py
