[tool.poetry]
name = "snakemake-executor-plugin-googlebatch"
version = "0.1.0"
description = ""
authors = [
    "Vanessa Sochat <sochat1@llnl.gov>",
    "Johannes Koester <johannes.koester@uni-due.de>"
]
readme = "README.md"
packages = [{include = "snakemake_executor_plugin_googlebatch"}]

[tool.poetry.dependencies]
python = "^3.11"
google-cloud-batch = "^0.17.1"
requests = "^2.31.0"
google-api-core = "^2.12.0"
google-cloud-storage = "^2.12.0"
snakemake-interface-common = {git = "https://github.com/snakemake/snakemake-interface-common.git"}
snakemake-interface-executor-plugins = {git = "https://github.com/snakemake/snakemake-interface-executor-plugins.git"}
snakemake-interface_storage-plugins = {git = "https://github.com/snakemake/snakemake-interface-storage-plugins.git"}
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
coverage = "^7.3.1"
pytest = "^7.4.2"
snakemake = {git = "https://github.com/snakemake/snakemake.git"}
snakemake-storage-plugin-s3 = "^0.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"