[build-system]
requires = ["flit-core >=3.12,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "snakemake-executor-plugin-googlebatch"
version = "0.6.0"
description = "A Snakemake executor plugin for Google Batch."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
keywords = ["snakemake", "plugin", "executor", "cloud", "google-batch"]
authors = [
    {name = "Vanessa Sochat", email = "sochat1@llnl.gov"},
    {name = "Johannes Koester", email = "johannes.koester@uni-due.de"},
    {name = "Tadas Bareikis", email = "tadas@vugene.com"},
]
classifiers=[
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "google-cloud-batch>=0.17.1,<0.18.0",
    "snakemake>=9,<10",
    "requests>=2.31.0,<3.0.0",
    "google-api-core>=2.12.0,<3.0.0",
    "google-cloud-storage>=2.12.0,<3.0.0",
    "snakemake-storage-plugin-gcs",
    "snakemake-interface-common>=1.14.0,<2.0.0",
    "snakemake-interface-executor-plugins>=9.0.0,<10.0.0",
    "jinja2>=3.1.2,<4.0.0",
    "google-cloud-logging>=3.11.4,<4.0.0",
]

[project.urls]
Homepage = "https://github.com/snakemake/snakemake-executor-plugin-googlebatch"
Repository = "https://github.com/snakemake/snakemake-executor-plugin-googlebatch"
"Bug Tracker" = "https://github.com/snakemake/snakemake-executor-plugin-googlebatch/issues"
Documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/executor/googlebatch.html"

[project.optional-dependencies]
dev = [
    "flit>=3.12.0",
    "connection-pool>=0.0.3",
    "ruff",
    "pytest>=7.4.2,<8.0.0",
    "snakemake-storage-plugin-s3>=0.3.1,<0.4.0",
    "mypy",
    "uv",
    "pytest-asyncio",
    "coverage>=7,<8",
]

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "Snakefile"]

[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "-r", "xs",
    "-vv",
    "--strict-markers",
    "--tb=short",
    "--color=yes",
]

[tool.mypy]
python_version = 3.11
# Ignore errors from importing modules which don't have type annotations
disable_error_code = "import-untyped,return"

[tool.ruff]
target-version = "py311"

exclude = [ "example/*" ]

[tool.ruff.lint]
ignore = [
    "E501", # line length
]
select = ["E", "F", "B", "W", "I", "C4", "ICN", "T20", "PLE", "RUF"]

[tool.ruff.lint.isort]
combine-as-imports = true
